# sopa-de-letrinhas

./: .gitignore  README.md  angular.json  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
django_settings/: asgi.py  settings.py  urls.py  wsgi.py
src/backend/accounts/: apps.py  serializers.py  urls.py
src/backend/accounts/serializers/: __init__.py  auth.py  user.py  user_display.py
src/backend/accounts/views/: __init__.py  auth.py  user.py
src/backend/core/: admin.py  apps.py  models.py  serializers.py
src/backend/demo_data/: apps.py
src/backend/demo_data/factories/: __init__.py  exercise_factory.py  membership_factory.py  organization_factory.py  user_factory.py  word_factory.py
src/backend/organization/: admin.py  apps.py  urls.py
src/backend/organization/migrations/: 0001_initial.py  0002_alter_membership_role_membership_is_active_and_more.py  0003_alter_membership_options_alter_organization_options_and_more.py  0004_organization_users_alter_membership_organization_and_more.py  0005_academicclasses.py  0006_alter_academicclasses_options_academicclasses_name.py  0007_organization_email_organization_is_approved.py
src/backend/organization/models/: __init__.py  academic_classes.py  membership.py  organization.py
src/backend/words_soup_game/: admin.py  apps.py  urls.py
src/frontend/: index.html  main.ts  styles.css
src/frontend/app/: app.component.ts  app.config.ts  app.routes.ts
src/frontend/environments/: environment.prod.ts  environment.ts
(+114 files in other folders)
