[tool.poetry]
name = "sopa-de-palavras-api-rest"
version = "0.1.0"
description = "Back and front single repository for sopa-de-palavras"
authors = ["Rodrigo Almeida <c.almeidarodrigo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
drf-spectacular = "^0.27.2"
factory-boy = "^3.3.1"
django-cors-headers = "^4.6.0"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
